convert to jackson 3, jspecify